# CherryGrove

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CherryGrove.rc  CherryGrove.sln  CherryGrove.vcxproj  CherryGrove.vcxproj.filters  LICENSE  README.chs.md  README.md  imgui.ini  meta.rc  nsis.nsi  resource.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-release.yml  build-windows.yml  compile-shaders.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
assets/schemas/manifest/: manifest_1.json
include/glm/: glm.hpp  integer.hpp
include/glm/detail/: func_integer.inl
include/nlohmann/: json.hpp
include/v8/libplatform/: libplatform.h  v8-tracing.h
libs/: README.md  fetch_prebuilt_libs.ps1  fetch_prebuilt_libs.sh
libs/bgfx/: README.md
libs/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
libs/imgui/backends/: fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  vs_ocornut_imgui.bin.h
libs/imgui/freetype/: imgui_freetype.h
libs/luajit/: README.md
libs/soloud/: README.md
libs/v8/: README.md
libs/wasmer/: README.md
libs/wasmtime/: README.md
packing/linux/: .gitignore  pack.sh
packing/linux/CherryGrove.AppDir/: AppRun  CherryGrove.desktop
packing/readmes/: README.txt  必读信息.txt
packing/windows/: CherryGrove.rc  pack.bat  pack.ps1  pack_installer.iss  script.iss  windows-x64-chs.nsi  windows-x64-en.nsi
packing/windows/nsis/: windows-x64-chs.nsi  windows-x64-en.nsi
packs/vanilla_blocks/: manifest.json
scripts/: compile_shaders.bat  nsis64_chs.nsi  nsis64_en.nsi  pack64.bat  pack_windows_x64.bat
scripts/nsis/: windows-x64-chs.nsi  windows-x64-en.nsi
src/: CherryGrove.cpp  CherryGrove.hpp  Main.cpp  Main.hpp  MainGame.cpp  MainGame.hpp  globalState.hpp  launcher.cpp  main.cpp  main2.cpp  meta.hpp  window.hpp
src/boot/: ConfigProvider.hpp  SessionLock.hpp  getExecutableDirectory.hpp  setWorkingDirectory.hpp
src/boot/focus/: Focus.hpp  Linux.hpp  MacOS.hpp  Windows.hpp  util.hpp
src/components/: Chunk.hpp  Components.hpp  Coordinates.hpp  CreatesLoadingZone.hpp  Ecs.cpp  Ecs.hpp  Health.hpp  LoadingSource.hpp  NameAndSpace.hpp  Rotation.hpp  _old_ManhattanRange.hpp  _old_chunkMesh.hpp
src/components/block/: BlockCoordinates.hpp  BlockRender.hpp  block.hpp
src/components/entity/: Acceleration.cpp  Acceleration.hpp  Camera.cpp  Camera.hpp  Coordinates.cpp  Coordinates.hpp  Health.hpp  Rotation.cpp  Rotation.hpp  Velocity.cpp  Velocity.hpp  entity.hpp
src/components/graphics/: chunkMesh.hpp
src/components/identity/: ID.hpp  identity.hpp
src/debug/: AtomicizedOutput.hpp  Console.hpp  Fatal.cpp  Fatal.hpp  Logger.cpp  Logger.hpp  LoggingMode.hpp  Mocks.hpp  controller.hpp  debug.hpp  dynamicLoggers.hpp  fatalCodes.hpp  implLShiftFor.hpp  loggers.hpp  manips.hpp  threadLocals.hpp
src/file/: FileDrop.cpp  FileDrop.hpp  FileLock.hpp
src/file/js/: V8Wrapper.cpp  V8Wrapper.hpp
src/file/json/: Json.cpp  Json.hpp
src/gameplay/: MainGame.cpp  MainGame.hpp  base.hpp
src/gameplay/save/: SaveManager.cpp  SaveManager.hpp
src/graphic/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  ShaderPool.cpp  ShaderPool.hpp  TexturePool.cpp  TexturePool.hpp  Window.cpp  renderer.cpp  renderer.hpp
src/graphic/renderInfo/: cubemesh.hpp  vertex.hpp
src/graphic/shader/: ShaderFactory.cpp  ShaderFactory.hpp  ShaderPool.cpp  ShaderPool.hpp  shader.cpp  shader.h  shader.hpp
src/graphic/texture/: TextureFactory.cpp  TextureFactory.hpp  (+2 more)
src/graphics/: Renderer.cpp  Renderer.hpp  ShaderPool.cpp  ShaderPool.hpp  TexturePool.cpp  TexturePool.hpp  controller.hpp  hold.hpp
src/gui/: Gui.cpp  Gui.hpp  GuiUtils.cpp  GuiUtils.hpp  Guis.cpp  Guis.hpp  InputHandler.cpp  InputHandler.hpp  MainWindow.cpp  MainWindow.hpp  Window.cpp  Window.hpp
src/input/: Action.hpp  ImGuiAdapter.cpp  ImGuiAdapter.hpp  InputHandler.cpp  InputHandler.hpp  InputKind.hpp  _old_eventPipeline.hpp  actionIds.hpp  canDelete.hpp  config.hpp  inputBase.hpp  inputPipeline.hpp  pointerLock.hpp  types.hpp  utils.hpp
src/js/: JSEngine.cpp  JSEngine.hpp
src/logger/: logger.cpp  logger.hpp
src/main/: hold.hpp  launch.hpp  runOnMainThread.hpp  shutdown.hpp
src/pack/: J4mcWrapper.cpp  J4mcWrapper.hpp  KnownPack.hpp  Pack.cpp  Pack.hpp  PackMetaInfo.hpp  PackOptionDef.hpp  PackOptionValue.hpp  PackStatus.cpp  PackStatus.hpp  PackVersionRange.hpp  V8Wrapper.cpp  V8Wrapper.hpp  base.hpp  pack.h  pack.hpp  packFetcher.hpp  packInstance.cpp  packInstance.h  packInstance.hpp  packManager.cpp  packManager.h  packManager.hpp  registry.hpp  v1.hpp
src/render/: BlockRenderInfo.cpp  BlockRenderInfo.hpp
src/save/: WorldList.cpp  WorldList.hpp  saveBase.hpp
src/settings/: JSONKind_Settings.hpp  PackOptionValue.hpp  Settings.hpp  base.hpp  pack.hpp  v1.hpp
src/shader/: base.frag  base.vert  varying.def.sc
src/shaders/: test.frag  test.glsl  test.vert  varying.def.sc
src/simulation/: LoadingZone.hpp  Region.cpp  Region.hpp  Simulation.cpp  Simulation.hpp  Time.hpp  base.hpp  controller.hpp  hold.hpp  playerEntity.hpp  registries.hpp  registry.hpp  runOnSimThread.hpp  states.hpp  temporary.hpp  tick.hpp
src/sound/: API.hpp  PitchShiftFilter.cpp  PitchShiftFilter.hpp  PlayInfo.hpp  SlotTableForAudio.hpp  SoLoudWrapper.cpp  SoLoudWrapper.hpp  Sound.cpp  Sound.hpp  SoundSource.hpp  command.hpp  commandQueue.hpp  commands.hpp  configs.hpp  controller.hpp  debug.hpp  enums.hpp  hold.hpp  playRegistry.hpp  soLoudInstance.hpp  soundRegistry.hpp  types.hpp  typesAndConstants.hpp
src/systems/: Acceleration.hpp  Camera.hpp  Coordinates.hpp  Health.hpp  Rotation.hpp  fly.hpp
src/umi/: Controller.hpp  controller.hpp
src/util/: BijectorArray.hpp  BitField.hpp  Promise.hpp  SlotTable.hpp  concepts.hpp  concurrentQueue.hpp  constants.hpp  functionTraits.hpp  implHashFor.hpp  lexical.hpp  macros.hpp  string.hpp  time.hpp  uuid.hpp
(+188 files in other folders)
